Add custom class

--- a/We-App-TVC/Storyboard.storyboard
+++ b/We-App-TVC/Storyboard.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Students Table View Controller-->
         <scene sceneID="vxS-eF-Qv2">
             <objects>
-                <tableViewController id="kyg-Db-n6a" sceneMemberID="viewController">
+                <tableViewController id="kyg-Db-n6a" customClass="WTVStudentsTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="w8z-gu-fBB">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
